--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,16 @@ on:
 
 jobs:
   build:
-
+    runs-on: ubuntu-latest
+  
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+          npm install
+          npm build
+        
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -27,6 +36,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    # - run: npm test
+    - name: npm install, and test
+      run: |
+        npm install
+      #  npm test
+      env:
+        CI: true
