--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-          npm run build
+        # npm run build
         
   test:
     runs-on: ubuntu-latest
