--- a/.github/workflow/approval-workflow.yml
+++ b/.github/workflow/approval-workflow.yml
@@ -4,3 +4,12 @@ on: pull_request_review
 jobs:
   labelWhenApproved:
     run-on: ubuntu-latest
+    step:
+      - name: Label approved pull requests
+        uses: abinoda/label-when-approved-action@v1.0.7
+        with:
+          APPROVALS: "1"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ADD_LABEL: "approved"
+          
+            
