--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -4,7 +4,7 @@ on: pull_request_review
 jobs:
   labelWhenApproved:
     name: Label when approved
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Label approved pull requests
         uses: abinoda/label-when-approved-action@v1.0.7
