--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Label approved pull requests
         uses: abinoda/label-when-approved-action@v1.0.7
-        with:
+        env:
           APPROVALS: "1"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ADD_LABEL: "approved"
